--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,8 @@ ul{
     max-width: 1280px;
     margin-right: auto;
     margin-left: auto;
-    width: 100%;
+    width: 100%; 
+    padding: 20px 0px 0px 0px;
 }
 
 .section-banner{
@@ -1086,14 +1087,14 @@ body.lightmode .keep-dark .btn-accent{
 .banner-video-container {
   position: relative;
   width: 100%;
-  height: 100vh; /* Full-screen height or adjust as needed */
+  height: 106vh; /* Full-screen height or adjust as needed */
   overflow: hidden;
   border-radius: var(--global-border-radius);
   border: 1px solid var(--accent-color-3);
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0; /* Remove padding to let the video fill */
+  padding: 20px 0px; /* Remove padding to let the video fill */
   z-index: 1;
 }
 
@@ -4579,7 +4580,7 @@ body.lightmode .cta-service-banner::before{
         display: block;
     }
     .title-heading-banner{
-        background-image: linear-gradient(340deg, var(--accent-transparent) 10%, var(--primary) 100%);
+        /* background-image: linear-gradient(340deg, var(--accent-transparent) 10%, var(--primary) 100%); */
     }
     .about-img-layout{
         width: 100%;
@@ -4951,6 +4952,8 @@ body.lightmode .cta-service-banner::before{
     .grid-spacer-y-sm-5 { 
         --bs-gutter-y: 50px; 
     }
+
+
 }
 
 @media screen and (max-width: 767px){
@@ -4995,7 +4998,7 @@ body.lightmode .cta-service-banner::before{
         max-width: 100%;
     }
     .section-banner{
-        padding: 0px 20px 0px 20px;
+        padding: 20px 20px 20px 20px;
     }
     .section-guide{
         padding: 0px 20px 0px 20px;
