--- a/css/style.css
+++ b/css/style.css
@@ -115,20 +115,21 @@
     --secondary: #040404;
     --text-color: #8B8B8B;
     --text-color-2: var(--secondary); 
-    --accent-color: #C82AEF; 
+    --accent-color: #3FA2F6; 
     --accent-color-2: #FFFFFF;
     --accent-color-3: #1F1F1F;
     --accent-color-4: #0E0E0E;
     --accent-color-5: #0404047D;
-    --accent-color-6: #C82AEF85;
+    --accent-color-6: #3FA2F6;
     --star-color: #EFBC2A;
     --error-color: #e63946;
     --accent-transparent: #00000000;
     --accent-transparent-2: #00000073;
-    --box-shadow-top-left: -3px -3px 7px 0px rgba(200.00000000000006, 42, 238.99999999999997, 0.44);
-    --box-shadow-bottom-right: 3px 3px 7px 0px rgba(200.00000000000006, 42, 238.99999999999997, 0.44);
-    --box-shadow-top-left-wide: -3px -3px 10px 0px rgba(200.00000000000006, 42, 238.99999999999997, 0.44);
-    --box-shadow-bottom-right-wide: 3px 3px 10px 0px rgba(200.00000000000006, 42, 238.99999999999997, 0.44);
+--box-shadow-top-left: -3px -3px 7px 0px rgba(63, 162, 246, 0.44);
+--box-shadow-bottom-right: 3px 3px 7px 0px rgba(63, 162, 246, 0.44);
+--box-shadow-top-left-wide: -3px -3px 10px 0px rgba(63, 162, 246, 0.44);
+--box-shadow-bottom-right-wide: 3px 3px 10px 0px rgba(63, 162, 246, 0.44);
+
     --global-font: "Plus Jakarta Sans", sans-serif;
     --global-border-radius: 25px 25px 25px 25px;
     --animation-normal: 1.25s;
@@ -578,6 +579,11 @@ body.lightmode .form select{
     width: 600px;
     color: var(--primary);
 }
+
+.colored-icon {
+  filter: invert(53%) sepia(89%) saturate(3041%) hue-rotate(189deg) brightness(97%) contrast(97%);
+}
+
 
 .search-form input:focus {
     border: 1px solid var(--accent-color-5);
